--- a/index.html
+++ b/index.html
@@ -11,6 +11,32 @@
 
 </head>
 <body>
+    <header>
+        <div>
+            <img class="logo" src="./images/logo-white.svg" alt="zarinpal logo" />
+            <nav>
+                <ul class="header-ul">
+                  <li class="more-menu" id="show-product-menu">
+                     <a href="#">محصولات</a>
+                     <img src="./images/down-arrow-svgrepo-com.svg" />
+                  </li>
+                  <li>
+                    <a href="#">تعرفه ها</a>
+                 </li>
+                 <li>
+                    <a href="#">توسعه دهنده ها</a>
+                 </li>
+                 <li>
+                    <a href="#">تماس با ما</a>
+                 </li>
+                 <li class="more-menu" id="show-more-menu">
+                    <a href="#">بیش‌تر</a>
+                    <img src="./images/down-arrow-svgrepo-com.svg" />
+                 </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
 
 
