some codes added to nav bar

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                     <a href="#">بیش‌تر</a>
                     <img src="./images/down-arrow-svgrepo-com.svg" />
                  </li>
+                 <li>
+                    <a href="#">زرین‌پال من</a>
+                 </li>
                 </ul>
             </nav>
         </div>
