some codes changes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <header>
         <div>
             <img class="logo" src="./images/logo-white.svg" alt="zarinpal logo" />
+        </div>
             <nav>
                 <ul class="header-ul">
                   <li class="more-menu" id="show-product-menu">
@@ -38,8 +39,9 @@
                  </li>
                 </ul>
             </nav>
-        </div>
+        
     </header>
+    <div style="width:100vw; height:2000px; background-color:red;"></div>
 
 
 
