dropdown for nav bar has been added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,31 @@
                   <li class="more-menu" id="show-product-menu">
                      <a href="#">محصولات</a>
                      <img src="./images/down-arrow-svgrepo-com.svg" />
+
+                      <div class="product-menu"> 
+                        <div>
+                            <a href="#">
+                                <p>درگاه پرداخت</p>
+                                <p>مهندسی شده برای فروش بیش‌تر</p>
+                            </a>
+                            <a href="#">
+                                <p>درگاه پرداخت</p>
+                                <p>مهندسی شده برای فروش بیش‌تر</p>
+                            </a>
+                            <a href="#">
+                                <p>درگاه پرداخت</p>
+                                <p>مهندسی شده برای فروش بیش‌تر</p>
+                            </a>
+                            <a href="#">
+                                <p>زرین کارت</p>
+                                <p>طلایی ترین کارت بانکی</p>
+                            </a>
+                            <a href="#">
+                                <p>زرین کارت</p>
+                                <p>طلایی ترین کارت بانکی</p>
+                            </a>
+                        </div>
+                      </div>
                   </li>
                   <li>
                     <a href="#">تعرفه ها</a>
@@ -33,13 +58,63 @@
                  <li class="more-menu" id="show-more-menu">
                     <a href="#">بیش‌تر</a>
                     <img src="./images/down-arrow-svgrepo-com.svg" />
+
+                    <ul>
+                        <li>
+                            <a href="#">سوالات متداول</a>
+                        </li>
+                        <li>
+                            <a href="#">سوالات متداول</a>
+                        </li>
+                        <li>
+                            <a href="#">سوالات متداول</a>
+                        </li>
+                        <li>
+                            <a href="#">سوالات متداول</a>
+                        </li>
+                        <li>
+                            <a href="#">سوالات متداول</a>
+                        </li>
+                    </ul>
                  </li>
                  <li>
                     <a href="#">زرین‌پال من</a>
                  </li>
                 </ul>
             </nav>
-        
+            <img class="hamburger-icon" src="./images/hamburger.svg" alt="hamburger menu"/>
+
+            <div class="hamburger-menu">
+                <div class="cross-icon">
+                    <img src="./images/cross.svg" alt="cross icon" />
+                </div>
+                <div class="hanburger-menu-items">
+                    <ul>
+                        <li>
+                            <a href="#">تعرفه ها</a>
+                        </li>
+                        <li>
+                            <a href="#">اپلیکیشن</a>
+                        </li>
+                        <div></div>
+                        <li>
+                            <a href="#">سوالات متداول</a>
+                        </li>
+                        <li>
+                            <a href="#">محصولات</a>
+                        </li>
+                        <li>
+                            <a href="#">تماس با ما</a>
+                        </li>
+                    </ul>
+
+                </div>
+                <div class="more-item">
+                    <a href="#">زرین‌پال‌من</a>
+                    <img src="./images/arrow.svg" alt="arrow" />
+
+                </div>
+            </div>
     </header>
     <div style="width:100vw; height:2000px; background-color:red;"></div>
 
