--- a/index.html
+++ b/index.html
@@ -123,13 +123,14 @@
                 <h3>بیش از ۱۲ سال</h3>
                 <h3>انتخاب مطمئنِ کسب و کارهای آنلاین</h3>
                 <p>زرین‌پال، اولین پرداخت‌یار پیشگام کشور، با به‌کارگیری سبک و استانداردهای جدید در ارائه‌ی خدمات درگاه پرداخت اینترنتی، سرویس‌های متنوعی در حوزه‌ی پرداخت الکترونیک را برای کسب و کارها ارائه کرده است؛ با این هدف که در افزایش سهم تجارت الکترونیکی در تولید ناخالص ملی و کمک به رشد و توسعه‌ی کسب‌وکارها، نقش سازنده‌‌ای ایفا کند.</p>
-                <div>
+                
+                <div class="banner-button">
                     <a class="resgister" href="#">ثبت نام</a>
                     <a class="login" href="#">ورود</a>
                 </div>
-                <div class="banner-image">
-                    <img src="./images/home.svg" alt="home img">
-                </div>
+            </div>
+            <div class="banner-image">
+                <img src="./images/home.svg" alt="home img">
             </div>
         </div>
         <div class="go-down">
