--- a/index.html
+++ b/index.html
@@ -143,6 +143,27 @@
              <img src="./images/down-arrow-svgrepo-com.svg" alt="">
         </div>
     </main>
+    <section class="online-payment">
+        <div>
+            <img src="./images/pg.svg" class="section-image" alt="pic">
+        </div>
+        <div>
+            <h2>
+             درگاه پرداخت اینترنتی
+            </h2>
+            <h3>
+                مهندسی شده برای رشد و فروش بیش‌تر 
+            </h3>
+            <p>درگاه پرداخت زرین‌پال، با اتصالِ همزمان به درگاه‌های متنوع و معتبر بانکی(PSPها)،کاربران را به سریع‌ترین و مطمئن‌ترین درگاه بانکی منتقل می‌کند و به واسطه‌ی قابلیت مسیردهی هوشمند، باعث افزایش درصد تراکنش‌های موفق می‌شود.</p>
+            <div class="section-links">
+                <a href="#" class="first-button">ساخت درگاه پرداخت</a>
+                <a href="#" class="first-button">بیش‌تر بدانید
+                    <img src="./images/arrow.svg" alt="pic">
+                </a>
+            </div>
+        </div>
+
+    </section>
 
 
 
