--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div>
             <img src="./images/pg.svg" class="section-image" alt="pic">
         </div>
-        <div>
+        <div class="section-text">
             <h2>
              درگاه پرداخت اینترنتی
             </h2>
@@ -157,7 +157,7 @@
             <p>درگاه پرداخت زرین‌پال، با اتصالِ همزمان به درگاه‌های متنوع و معتبر بانکی(PSPها)،کاربران را به سریع‌ترین و مطمئن‌ترین درگاه بانکی منتقل می‌کند و به واسطه‌ی قابلیت مسیردهی هوشمند، باعث افزایش درصد تراکنش‌های موفق می‌شود.</p>
             <div class="section-links">
                 <a href="#" class="first-button">ساخت درگاه پرداخت</a>
-                <a href="#" class="first-button">بیش‌تر بدانید
+                <a href="#" class="second-button">بیش‌تر بدانید
                     <img src="./images/arrow.svg" alt="pic">
                 </a>
             </div>
