codes for start box added

--- a/index.html
+++ b/index.html
@@ -307,6 +307,12 @@
         </div>
       </article>
 
+      <div class="start-box">
+        <h4>به خانواده‌ی یک میلیونی زرین‌پال بپیوندید.</h4>
+        <p>یک ماه رایگان، هدیه‌ی عضویت زرین‌پال به شما</p>
+        <a href="#">شروع کنید</a>
+      </div>
+
 
 
     <script src="./javascript/script.js"></script>
