support codes added

--- a/index.html
+++ b/index.html
@@ -312,6 +312,16 @@
         <p>یک ماه رایگان، هدیه‌ی عضویت زرین‌پال به شما</p>
         <a href="#">شروع کنید</a>
       </div>
+      
+      <div class="support">
+        <div class="support-number">
+            <p>پشتیبانی ۲۴ ساعته، ۷ روز هفته <span class="line">|</span> شماره تماس: <span class="phone-number"> ۴۱۲۳۹-۰۲۱</span></p>
+        </div>
+        <div class="support-request">
+            <p>درخواست پشتیبانی</p>
+            <img src="./images/arrow.svg" alt="pic">
+        </div>
+      </div>
 
 
 
