responsive codes for footer added

--- a/index.html
+++ b/index.html
@@ -374,6 +374,10 @@
         </div>
       </footer>
 
+      <div class="bell">
+           <img src="./images/bell.svg" alt="bell">
+      </div>
+
 
 
     <script src="./javascript/script.js"></script>
